--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "index.d.ts"
   ],
   "dependencies": {
-    "linguist-languages": "^9.2.0",
-    "@jorgsowa/php-parser": "3.2.5-7"
+    "@jorgsowa/php-parser": "3.2.5-7",
+    "linguist-languages": "^9.2.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.27.2",
