update version to 0.24.0-1

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@jorgsowa/prettier-plugin-php",
-  "version": "0.24.0",
+  "version": "0.24.0-1",
   "description": "Prettier PHP Plugin",
-  "repository": "prettier/prettier-php",
+  "repository": "jorgsowa/plugin-php",
   "author": "Lucas Azzola <@azz>",
   "license": "MIT",
   "unpkg": "./standalone.js",
